fixed #output alignment when responsive

--- a/style.css
+++ b/style.css
@@ -86,8 +86,9 @@ sup {
 }
 
 #output {
-	position:absolute;
-	right:265px;
+	position:relative;
+	float:right;
+	margin-right:-20px;
 }
 #root {
 	float: right;
